--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
+@import url("http://fonts.googleapis.com/css?family=Press+Start+2P");
+@import url("http://fonts.googleapis.com/css?family=VT323");
+
 .App {
   text-align: center;
+  font-family: "Press Start 2P", "VT323";
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+.underline {
+  text-decoration: underline;
 }
 
-.App-link {
-  color: #61dafb;
+input, select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  width: 100%;
+  background-color: #FFFFFFC0;
+  color: #000;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+input:hover {
+  background-color: #f6df4c;
+}
+
+.checkbox {
+  display: inline-block; 
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  border: 2px #ddd solid;
+  margin-right: 4px;
+}
+
+.checkbox--active {
+  border-color: purple;
+  background: purple;
+}
+
+a {
+  text-decoration: none; /* no underline */
 }
